--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
     "url": "https://github.com/open-tech-world/parse-env-file/issues"
   },
   "homepage": "https://github.com/open-tech-world/parse-env-file#readme",
-  "dependencies": {},
+  "dependencies": {
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-prettier": "^3.1.0"
+  },
   "devDependencies": {
     "eslint": "^5.16.0",
     "prettier": "^1.17.1",
     "rollup": "^1.14.0",
     "rollup-plugin-filesize": "^6.1.0"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
