--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "module": "parse-env-file.esm.js",
   "scripts": {
     "test": "jest --watch",
+    "prebuild": "rm -rf dist/*",
     "build": "rollup -c",
-    "start": "rollup -c -w"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,7 @@
     "url": "https://github.com/open-tech-world/parse-env-file/issues"
   },
   "homepage": "https://github.com/open-tech-world/parse-env-file#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -35,7 +35,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.1",
-    "rollup": "^1.14.0",
+    "rollup": "^1.14.3",
+    "rollup-plugin-eslint": "^6.0.0",
     "rollup-plugin-filesize": "^6.1.0"
   },
   "files": [
