--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "homepage": "https://github.com/open-tech-world/parse-env-file#readme",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.3.0",
