--- a/__tests__/.env.vars.mixed
+++ b/__tests__/.env.vars.mixed
@@ -1,8 +1,12 @@
 # Comment 1
 ENV=val
 
+# ENV1=val1
+
 // Comment 2
 ENV2=val2
+
+// ENV_VAR=Some Value
 
 ENV3= val3
 
@@ -23,3 +27,5 @@ EMPTY=
 JSON={"foo": "bar"}
 
 FOO=" some value "
+
+FLAG=true
