Ignore comments while parse

--- a/__tests__/.env.vars.mixed
+++ b/__tests__/.env.vars.mixed
@@ -14,7 +14,7 @@ ENV4 =val4
 
 ENV5 = val5
 
-ENV6=Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+ENV6=Lorem Ipsum is simply dummy \n text of the printing and typesetting industry.
 
 NEW_ENV_VAR_6=10
 
