Fix module resolving in config

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@open-tech-world/parse-env-file",
   "version": "1.0.0",
   "description": "Node.js utility to parse .env files.",
-  "main": "parse-env-file.cjs.js",
-  "module": "parse-env-file.esm.js",
+  "main": "dist/parse-env-file.cjs.js",
+  "module": "dist/parse-env-file.esm.js",
   "scripts": {
     "test": "jest --watch",
     "prebuild": "rm -rf dist/*",
